--- a/pSQL.ipynb
+++ b/pSQL.ipynb
@@ -1,9 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pSQL problem implemented in python\n",
+    "Amazon redshift data\n",
+    "- Compute the aggregate \"share rate\": Ratio of shares to searches\n",
+    "- Compute the share rate for the top 1000 most-searched terms\n",
+    "- How many unique search terms are there? What does the distribution look like (consider the count per search term; plot or describe the results)?\n",
+    "- How many unique gifs are shared? What does the distribution look like?\n",
+    "\n",
+    "- A \"search session\" is defined as a series of consecutive searches by a user, close in temporal proximity (typically on the order of seconds), that may or may not result in a share. Given the available data, how would you compute the average duration of a search session?Estimate the average duration of a search session, and compute the ratio of shares to search sessions.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import psycopg2 as pg\n",
@@ -17,10 +33,12 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "con = pg.connect(\"host='data-challenge.cpzsedc9pony.us-west-2.redshift.amazonaws.com' dbname='dev' user='' port='' password=''\")\n"
+    "con = pg.connect(\"host='' dbname='' user='' port='' password=''\")\n"
    ]
   },
   {
@@ -104,7 +122,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -274,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for ii in range(len(gif_counts)):\n",
@@ -284,7 +306,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
