--- a/pSQL.ipynb
+++ b/pSQL.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "pSQL problem implemented in python\n",
-    "Amazon redshift data\n",
+    "(Amazon redshift public data)\n",
     "- Compute the aggregate \"share rate\": Ratio of shares to searches\n",
     "- Compute the share rate for the top 1000 most-searched terms\n",
     "- How many unique search terms are there? What does the distribution look like (consider the count per search term; plot or describe the results)?\n",
